--- a/client/src/styles/Modals.css
+++ b/client/src/styles/Modals.css
@@ -12,21 +12,21 @@
 
 .modalsContainer>section {
     width: 95%;
-    max-width: 500px;
+    max-width: 425px;
     background-color: var(--modal-back);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
     border-radius: 10px;
-    padding: 40px 35px;
+    padding: 30px 25px;
 }
 
 .modalsContainer button {
     flex: 1;
     border-radius: 100px;
     border: none;
-    font-size: .9rem;
+    font-size: .8rem;
     font-weight: 600;
     cursor: pointer;
     transition: .25s;
@@ -74,6 +74,7 @@
 /* Edit Board modal */
 .modalsContainer .editBoardContainer>h1 {
     color: var(--color-title);
+    font-size: 1.25rem;
     margin-bottom: 5px;
 }
 
@@ -81,7 +82,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 15px;
 }
 
 .modalsContainer .editBoardContainer form>div {
@@ -94,14 +95,19 @@
 .modalsContainer .editBoardContainer form>div:nth-child(2)>div>div {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
 }
 
 .modalsContainer .editBoardContainer form>div:nth-child(2)>div {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     margin-bottom: 10px;
+}
+
+.modalsContainer .editBoardContainer form label {
+    font-weight: 600;
+    font-size: .8rem;
 }
 
 .modalsContainer .editBoardContainer form input {
@@ -110,14 +116,25 @@
     background-color: transparent;
     color: var(--color-title);
     border-radius: 5px;
-    border: 2px solid var(--mediumGray);
+    border: 2px solid var(--mediumGrayOpacity);
     font-size: .9rem;
+    font-weight: 600;
     outline: none;
+    transition: .25s;
     padding: 0 0 0 15px;
+}
+
+.modalsContainer .editBoardContainer form input:focus {
+    border-color: var(--darkBlue);
 }
 
 .modalsContainer .editBoardContainer i {
     cursor: pointer;
+    transition: .25s;
+}
+
+.modalsContainer .editBoardContainer i:hover {
+    opacity: .5;
 }
 
 .modalsContainer .editBoardContainer form>button {
