--- a/client/src/styles/Modals.css
+++ b/client/src/styles/Modals.css
@@ -71,47 +71,50 @@
 
 
 /* ***************************************** */
-/* Edit Board modal */
-.modalsContainer .editBoardContainer>h1 {
+/* shared modal styles */
+.modalsContainer .sharedModal>h1 {
     color: var(--color-title);
     font-size: 1.25rem;
     margin-bottom: 5px;
 }
 
-.modalsContainer .editBoardContainer form {
+.modalsContainer .sharedModal form {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-.modalsContainer .editBoardContainer form>div {
+.modalsContainer .sharedModal form>div {
     color: var(--mediumGray);
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.modalsContainer .editBoardContainer form>div:nth-child(2)>div>div {
+.modalsContainer .sharedModal form>div:nth-child(2)>div>div {
     display: flex;
     align-items: center;
-    gap: 10px;
 }
 
-.modalsContainer .editBoardContainer form>div:nth-child(2)>div {
+.modalsContainer .sharedModal form>div:nth-child(2)>div i {
+    margin-left: 10px;
+}
+
+.modalsContainer .sharedModal form>div:nth-child(2)>div {
     display: flex;
     flex-direction: column;
     gap: 10px;
     margin-bottom: 10px;
 }
 
-.modalsContainer .editBoardContainer form label {
+.modalsContainer .sharedModal form label {
     font-weight: 600;
     font-size: .8rem;
 }
 
-.modalsContainer .editBoardContainer form input {
-    width: calc(100% - 15px);
+.modalsContainer .sharedModal form input {
+    width: calc(100% - 20px);
     height: 40px;
     background-color: transparent;
     color: var(--color-title);
@@ -124,24 +127,32 @@
     padding: 0 0 0 15px;
 }
 
-.modalsContainer .editBoardContainer form input:focus {
+.modalsContainer .sharedModal form input:focus {
     border-color: var(--darkBlue);
 }
 
-.modalsContainer .editBoardContainer i {
+.modalsContainer .sharedModal i {
     cursor: pointer;
     transition: .25s;
 }
 
-.modalsContainer .editBoardContainer i:hover {
+.modalsContainer .sharedModal i:hover {
     opacity: .5;
 }
 
-.modalsContainer .editBoardContainer form>button {
+.modalsContainer .sharedModal form>button {
     background-color: var(--darkBlue);
     color: var(--white);
 }
 
-.modalsContainer .editBoardContainer form>div:nth-child(2) button {
+.modalsContainer .sharedModal form>div:nth-child(2) button {
     color: var(--darkBlue);
+}
+
+/* *********************************** */
+/* Add new column */
+.modalsContainer .addNewColumnModal form>div:nth-child(1)>input {
+    opacity: .25;
+    color: var(--mediumGray);
+    pointer-events: none;
 }
