--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -9,7 +9,7 @@
     border-top: 1px solid var(--color-border);
     position: absolute;
     top: 90px;
-    transition: background-color .25s ease-in-out 0s, transform .25s ease-in-out .5s, border-right .25s ease-in-out 0s;
+    transition: transform .25s ease-in-out .5s;
     z-index: 1000000;
 }
 
@@ -109,7 +109,6 @@
     align-items: center;
     gap: 10px;
     border-radius: 5px;
-    transition: .25s;
     padding: 15px 0;
 }
 
