--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -27,6 +27,22 @@ input {
     font-family: inherit;
 }
 
+
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: var(--darkGrayLine);
+    border-radius: 100px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--darkBlue);
+    border-radius: 100px;
+}
+
 * {
     margin: 0;
     padding: 0;
