--- a/client/src/styles/columns.css
+++ b/client/src/styles/columns.css
@@ -74,6 +74,47 @@
     fill: var(--darkBlue);
 }
 
+/* create board button */
+.createBoardBtn {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.createBoardBtn p {
+    color: var(--color-title);
+}
+
+.createBoardBtn button {
+    background-color: var(--darkBlue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    border: none;
+    border-radius: 100px;
+    outline: none;
+    color: var(--white);
+    font-size: .9rem;
+    font-weight: 550;
+    transition: .25s;
+    cursor: pointer;
+    padding: 12px 25px;
+}
+
+.createBoardBtn button span {
+    font-size: 1.1rem;
+    margin-bottom: 2px;
+}
+
+.createBoardBtn button:hover {
+    opacity: .7;
+}
+
 /* *********************************** */
 /* *********************************** */
 /* *********************************** */
