--- a/client/src/styles/loader.css
+++ b/client/src/styles/loader.css
@@ -1,4 +1,5 @@
 .loader {
+    width: 100%;
     position: absolute;
     top: -50px;
     left: 50%;
@@ -16,6 +17,7 @@
     font-size: .8rem;
     transition: .25s ease-in-out 0s;
     letter-spacing: 1px;
+    transform: translateX(-50%);
     padding: 5px 0px;
     position: absolute;
 }
